@@ -3,3 +3,4 @@ Maintainers:
 
 Contributors:
 	David Futcher <bobbo@ubuntu.com>
+	Alessio Treglia <quadrispro@ubuntu.com>
