@@ -1,3 +1,6 @@
+  125 Luca Falavigna	2009-03-11
+      Add Contents module
+
   124 Luca Falavigna	2009-03-02
       Built packages are now stored in "pool" directory
 
